# shell-in-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main  main.c  output.txt  shell.c
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/: main.c  shell.c
src/commands/: commands.c  commands.h
src/parser/: parser.c  parser.h
